<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoverioSensors</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleIMU">IMU</string>
    <string name="textX">X:</string>
    <string name="textY">Y:</string>
    <string name="textZ">Z:</string>
    <string name="titleGyro">Gyro</string>

</resources>
